kubernetes/01-namespace.yaml
 #### `kubernetes/01-namespace.yaml`

apiVersion: v1
kind: Namespace
metadata:
  name: laravel-app
